# ai_native_kit

./: README.md  pyproject.toml
src/ai_native_kit/: __init__.py  __main__.py  cli.py  config.py  doctor.py  installer.py
src/ai_native_kit/assets/: ai-native-kit.toml.example
src/ai_native_kit/assets/agents/: DEVELOPER.md  IMPACT_ASSESSOR.md  ORCHESTRATOR.md  REFACTOR.md  REPORTER.md  REVIEW.md  SECURITY_AUDITOR.md  TESTER.md  TEST_WRITER.md
src/ai_native_kit/assets/claude_templates/: CLAUDE_DEFAULT.md
src/ai_native_kit/assets/commands/: adr.md  pr-3axis-review.md  pr-report.md  release-sync.md  spec-design.md
src/ai_native_kit/assets/docs_context/: decisions.md
src/ai_native_kit/assets/githooks/: post-checkout
src/ai_native_kit/assets/module_templates/: README.md
src/ai_native_kit/assets/presets/clean/: CLAUDE.root.md
src/ai_native_kit/assets/presets/clean/docs_context/: MAP.md  architecture.md
src/ai_native_kit/assets/presets/frontend/: CLAUDE.root.md
src/ai_native_kit/assets/presets/frontend/docs_context/: MAP.md  architecture.md
src/ai_native_kit/assets/specs/: README.md  SPEC_TEMPLATE.md
src/ai_native_kit/assets/specs/plan/: PLAN_TEMPLATE.md
